--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<h1 class="name oswald-font">Yotam Katznelson</h1>
 				<hr>
 				<p class="location text col-md-6">
-					<span class="fa fa-location-arrow"></span>
+					<span class="fa fa-map-marker"></span>
 					Lisbon, PT
 					<br>
 					<span class="social-links-wrapper">
@@ -161,11 +161,16 @@
 			<div class="col-md-12">
 				<hr>
 				<p class="summary" style="font-family:inherit;">
-					<sup class="fa fa-quote-left"></sup>
-					Professional IT engineer. Electric Engineer by eductaion. Software Engineer by profession.
-					Successfully leading development teams in various projects, not so successfully leading my kids (but
-					working on it... &#x1F605;). Always happy to hear about interesting projects.
-					<sup class="fa fa-quote-right"></sup>
+					<!-- <sup class="fa fa-quote-left"></sup> -->
+				<p>Professional IT engineer and manager.</p>
+				<p>Electric Engineer by eductaion. Software Engineer by
+					profession.</p>
+				<p>Successfully leading development teams in various initiatives and domains, not so successfully
+					leading my
+					kids (but
+					working on it... &#x1F605;).</p>
+				<p>Always happy to hear about interesting projects.</p>
+				<!-- <sup class="fa fa-quote-right"></sup> -->
 				</p>
 			</div>
 			<div class="col-md-12">
