--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 			background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/snow.png");
 		}
 
+		.headline p {
+			font-size: 14px;
+			font-weight: bold;
+		}
+
 		.oswald-font {
 			font-family: 'oswald';
 			vertical-align: bottom;
@@ -158,7 +163,7 @@
 					<br>
 				</p>
 			</div>
-			<div class="col-md-12">
+			<div class="col-md-12 headline">
 				<hr>
 				<p class="summary" style="font-family:inherit;">
 					<!-- <sup class="fa fa-quote-left"></sup> -->
