--- a/index.html
+++ b/index.html
@@ -188,9 +188,16 @@
 								<span class="pull-right position-time">( 2020 - Present )</span>
 							</h3>
 							<h4 class="position-location">
-								<a target="_blank" , href="https://amun.com/">
-									@Amun AG, Remote team - Switzerland / USA / Earth
-								</a>
+								<p>
+									<a target="_blank" , href="https://amun.com/">
+										@Amun AG, Switzerland / USA / Earth (remote team)
+									</a>
+								</p>
+								<p>
+									<a target="_blank" , href="https://21shares.com/">
+										@21Shares AG, Switzerland / USA / Earth (remote team)
+									</a>
+								</p>
 							</h4>
 							<p class="text-muted">Leading an international team of engineers and driving forward the
 								technology vision of the organization</p>
@@ -202,9 +209,16 @@
 								<span class="pull-right position-time">( 2019 - 2020 )</span>
 							</h3>
 							<h4 class="position-location">
-								<a target="_blank" , href="https://amun.com/">
-									@Amun AG, Remote team - Switzerland / USA / Earth
-								</a>
+								<p>
+									<a target="_blank" , href="https://amun.com/">
+										@Amun AG, Switzerland / USA / Earth (remote team)
+									</a>
+								</p>
+								<p>
+									<a target="_blank" , href="https://21shares.com/">
+										@21Shares AG, Switzerland / USA / Earth (remote team)
+									</a>
+								</p>
 							</h4>
 							<p class="text-muted">Contributing and managing a team of highly skilled professionals,
 								automating fund management proccesses and bridging the gap between the fiat and the
