--- a/index.html
+++ b/index.html
@@ -159,12 +159,13 @@
 						type="text/javascript">/* <![CDATA[ */!function (t, e, r, n, c, a, p) { try { t = document.currentScript || function () { for (t = document.getElementsByTagName('script'), e = t.length; e--;)if (t[e].getAttribute('data-cfhash')) return t[e] }(); if (t && (c = t.previousSibling)) { p = t.parentNode; if (a = c.getAttribute('data-cfemail')) { for (e = '', r = '0x' + a.substr(0, 2) | 0, n = 2; a.length - n; n += 2)e += '%' + ('0' + ('0x' + a.substr(n, 2) ^ r).toString(16)).slice(-2); p.replaceChild(document.createTextNode(decodeURIComponent(e)), c) } p.removeChild(t) } } catch (u) { } }()/* ]]> */</script>
 					<br>
 					<span class="fa fa-phone"></span>
-					+49 (0) 1573-4428076
+					[phone&#160;protected]
 					<br>
 				</p>
 			</div>
 			<div class="col-md-12 headline">
 				<hr>
+				<i>(last update, May 22')</i>
 				<p class="summary" style="font-family:inherit;">
 					<!-- <sup class="fa fa-quote-left"></sup> -->
 				<p>Professional IT engineer and manager.</p>
@@ -201,6 +202,18 @@
 							</h4>
 							<p class="text-muted">Leading an international team of engineers and driving forward the
 								technology vision of the organization</p>
+							<ul>
+								<li>Over the course of three years, scaled up the engineering department from
+									1 to 50
+									engineers, across eight different teams</li>
+								<li>Directing the technological & strategic thinking of the organization
+									in order
+									to stay ahead of the curve in a very competetitive and demanding landscape
+								</li>
+								<li>Overseeing cutting edge innovation and development in financial
+									engineering, traditional finance and Blockchain technology
+								</li>
+							</ul>
 						</div>
 						<hr>
 						<div class="item-detail">
