fixed http to https

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Yotam Katznelson</title>
 	<link rel="icon" type="image/png" href="./favicon_cat.ico">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<style>
 		body {
 			font-family: 'Lato';
-			background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/snow.png");
+			background-image: url("https://cdn.backgroundhost.com/backgrounds/subtlepatterns/snow.png");
 		}
 
 		.headline p {
@@ -356,7 +356,7 @@
 								<span class="pull-right position-time">( 2016 )</span>
 							</h3>
 							<h4 class="position-location">
-								<a target="_blank" href="http://www.mapegy.com">
+								<a target="_blank" href="https://www.mapegy.com">
 									@Mapegy GmbH, Berlin, Germany
 								</a>
 							</h4>
@@ -423,7 +423,7 @@
 								<span class="pull-right position-time">( 2013 - 2015 )</span>
 							</h3>
 							<h4 class="position-location">
-								<a target="_blank" href="http://www.quickest-owl.com">
+								<a target="_blank" href="https://www.quickest-owl.com">
 									@Quickest Owl Ltd., Israel
 								</a>
 							</h4>
@@ -555,7 +555,7 @@
 					<div class="col-md-10">
 						<div class="item-detail">
 							<h3>
-								<a target="_blank" href="http://www.v15.org.il">
+								<a target="_blank" href="https://www.v15.org.il">
 									@V15
 								</a>
 							</h3>
@@ -576,7 +576,7 @@
 						<hr>
 						<div class="item-detail">
 							<h3>
-								<a target="_blank" href="http://www.media-noche.org">
+								<a target="_blank" href="https://www.media-noche.org">
 									@Media Noche Salsa
 								</a>
 							</h3>
@@ -644,9 +644,9 @@
 	</div>
 	<div id="pts" style="width: 100%; height: 400px; margin: 30px auto 0;"></div>
 
-	<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="https://unpkg.com/pts/dist/pts.min.js"></script>
 	<script>// Source code licensed under Apache License 2.0.
