--- a/index.html
+++ b/index.html
@@ -206,6 +206,10 @@
 								<li>Over the course of three years, scaled up the engineering department from
 									1 to 50
 									engineers, across eight different teams</li>
+								<li>Architected, implemented and maintained a financial backoffice system that runs 24/7 (for over three years now).
+									That system is automating and managing all the life-cycle events of the company suite of ETP products.
+									Allowing the AuM to grow from $10M when I joined in 2019, to $3B at the end of 2021.
+								</li>
 								<li>Directing the technological & strategic thinking of the organization
 									in order
 									to stay ahead of the curve in a very competetitive and demanding landscape
