changed location to europe

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				<hr>
 				<p class="location text col-md-6">
 					<span class="fa fa-map-marker"></span>
-					Lisbon, PT
+					Europe
 					<br>
 					<span class="social-links-wrapper">
 						<a href="https://www.linkedin.com/in/yotam-katznelson/" target="_blank">
@@ -168,10 +168,11 @@
 				<i>(last update, May 22')</i>
 				<p class="summary" style="font-family:inherit;">
 					<!-- <sup class="fa fa-quote-left"></sup> -->
-				<p>Professional IT engineer and manager.</p>
+				<p>Professional IT engineer and technical leader.</p>
 				<p>Electric Engineer by eductaion. Software Engineer by
 					profession.</p>
-				<p>Successfully leading development teams in various initiatives and domains, not so successfully
+				<p>I </p>
+				<p>Successfully leading development teams in various initiatives and domains. Not so successfully
 					leading my
 					kids (but
 					working on it... &#x1F605;).</p>
