--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 				<p>Professional IT engineer and technical leader.</p>
 				<p>Electric Engineer by eductaion. Software Engineer by
 					profession.</p>
-				<p>I </p>
 				<p>Successfully leading development teams in various initiatives and domains. Not so successfully
 					leading my
 					kids (but
 					working on it... &#x1F605;).</p>
+				<p>Excelling in distilling ideas into actions, bootstrapping tech teams and scaling operations.</p>
 				<p>Always happy to hear about interesting projects.</p>
 				<!-- <sup class="fa fa-quote-right"></sup> -->
 				</p>
@@ -216,7 +216,7 @@
 									to stay ahead of the curve in a very competetitive and demanding landscape
 								</li>
 								<li>Overseeing cutting edge innovation and development in financial
-									engineering, traditional finance and Blockchain technology
+									engineering, traditional finance and Blockchain technology (EVMs and non-EVMs alike)
 								</li>
 							</ul>
 						</div>
