--- a/index.html
+++ b/index.html
@@ -171,13 +171,9 @@
 				<p>Professional IT engineer and technical leader.</p>
 				<p>Electric Engineer by eductaion. Software Engineer by
 					profession.</p>
-				<p>Successfully leading development teams in various initiatives and domains. Not so successfully
-					leading my
-					kids (but
-					working on it... &#x1F605;).</p>
+				<p>Successfully leading development teams in various initiatives and domains.</p>
+				<p>Strong knowledge base and familiarity with financial engineering, in the intersection between regulated/traditional finance and Blockchain technology.</p>
 				<p>Excelling in distilling ideas into actions, bootstrapping tech teams and scaling operations.</p>
-				<p>Always happy to hear about interesting projects.</p>
-				<!-- <sup class="fa fa-quote-right"></sup> -->
 				</p>
 			</div>
 			<div class="col-md-12">
@@ -297,12 +293,12 @@
 						<hr>
 						<div class="item-detail">
 							<h3>
-								<span>Principal Engineer</span>
+								<span>Principal Staff Engineer</span>
 								<span class="pull-right position-time">( 2017 - 2018 )</span>
 							</h3>
 							<h4 class="position-location">
 								<a target="_blank" , href="https://traderepublic.com/en-de">
-									@Neon GmbH (currently Trade Republic), Germany
+									@Neon GmbH (rebranded to Trade Republic), Germany
 								</a>
 							</h4>
 							<p class="text-muted">Leading the development of a fintech application in the brokerage
@@ -310,7 +306,9 @@
 						</div>
 						<ul>
 							<li>Design, architecture, and implementation of main backend systems</li>
-							<li>Oversaw the development of critical internal systems, front and back</li>
+							<li>Oversaw and participates in the development of critical internal systems, mid and back office functions</li>
+							<li>System integrations with multiple partners and service providers in the financial domain</li>
+
 						</ul>
 						<hr>
 						<!-- <div class="item-detail">
@@ -333,7 +331,7 @@
 							<hr> -->
 						<div class="item-detail">
 							<h3>
-								<span>Freelance Senior software Engineer</span>
+								<span>Senior software Engineer</span>
 								<span class="pull-right position-time">( 2017 )</span>
 							</h3>
 							<h4 class="position-location">
