Update to backed

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-md-12 headline">
 				<hr>
-				<i>(last update, May 22')</i>
+				<i>(last update, June 23')</i>
 				<p class="summary" style="font-family:inherit;">
 					<!-- <sup class="fa fa-quote-left"></sup> -->
 				<p>Professional IT engineer and technical leader.</p>
@@ -183,7 +183,24 @@
 						<div class="item-detail">
 							<h3>
 								<span>CTO</span>
-								<span class="pull-right position-time">( 2021 - Present )</span>
+								<span class="pull-right position-time">( 2022 - present )</span>
+							</h3>
+							<h4 class="position-location">
+								<p>
+									<a target="_blank" , href="https://backed.fi/">
+										@Backed Finance AG, Switzerland / Earth (remote team)
+									</a>
+								</p>								
+							</h4>
+							<p class="text-muted">In charge of technical vision and engineering efforts of skilled engineers team. Revolutionizing 
+								financial structures and tokenizing real world assets on chain
+							</p>
+						</div>
+						<hr>
+						<div class="item-detail">
+							<h3>
+								<span>CTO</span>
+								<span class="pull-right position-time">( 2020 - 2022 )</span>
 							</h3>
 							<h4 class="position-location">
 								<p>
