--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-md-12 headline">
 				<hr>
-				<i>(last update, June 23')</i>
+				<i>(last update, September 23')</i>
 				<p class="summary" style="font-family:inherit;">
 					<!-- <sup class="fa fa-quote-left"></sup> -->
 				<p>Professional IT engineer and technical leader.</p>
@@ -200,12 +200,12 @@
 						<div class="item-detail">
 							<h3>
 								<span>CTO</span>
-								<span class="pull-right position-time">( 2020 - 2022 )</span>
+								<span class="pull-right position-time">( 2019 - 2022 )</span>
 							</h3>
 							<h4 class="position-location">
 								<p>
-									<a target="_blank" , href="https://amun.com/">
-										@Amun AG, Switzerland / USA / Earth (remote team)
+									<a target="_blank" , href="https://21.co/">
+										@21.co, Switzerland / USA / Earth (remote team)
 									</a>
 								</p>
 								<p>
@@ -232,28 +232,6 @@
 									engineering, traditional finance and Blockchain technology (EVMs and non-EVMs alike)
 								</li>
 							</ul>
-						</div>
-						<hr>
-						<div class="item-detail">
-							<h3>
-								<span>VP Engineering</span>
-								<span class="pull-right position-time">( 2019 - 2020 )</span>
-							</h3>
-							<h4 class="position-location">
-								<p>
-									<a target="_blank" , href="https://amun.com/">
-										@Amun AG, Switzerland / USA / Earth (remote team)
-									</a>
-								</p>
-								<p>
-									<a target="_blank" , href="https://21shares.com/">
-										@21Shares AG, Switzerland / USA / Earth (remote team)
-									</a>
-								</p>
-							</h4>
-							<p class="text-muted">Contributing and managing a team of highly skilled professionals,
-								automating fund management proccesses and bridging the gap between the fiat and the
-								crypto worlds</p>
 						</div>
 						<hr>
 						<div class="item-detail">
