--- a/index.html
+++ b/index.html
@@ -182,6 +182,22 @@
 					<div class="col-md-10">
 						<div class="item-detail">
 							<h3>
+								<span>COO</span>
+								<span class="pull-right position-time">( 2024 - present )</span>
+							</h3>
+							<h4 class="position-location">
+								<p>
+									<a target="_blank" , href="https://backed.fi/">
+										@Backed Finance AG, Switzerland / Earth (remote team)
+									</a>
+								</p>
+							</h4>
+							<p class="text-muted">Leading the operational efforts of the company. Coordinating HR, Legal, Compliance, Finance, and Business Development</p>
+							</p>
+						</div>
+						<hr>
+						<div class="item-detail">
+							<h3>
 								<span>CTO</span>
 								<span class="pull-right position-time">( 2022 - present )</span>
 							</h3>
@@ -190,9 +206,9 @@
 									<a target="_blank" , href="https://backed.fi/">
 										@Backed Finance AG, Switzerland / Earth (remote team)
 									</a>
-								</p>								
+								</p>
 							</h4>
-							<p class="text-muted">In charge of technical vision and engineering efforts of skilled engineers team. Revolutionizing 
+							<p class="text-muted">In charge of technical vision and engineering efforts of skilled engineers team. Revolutionizing
 								financial structures and tokenizing real world assets on chain
 							</p>
 						</div>
